--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -1,6 +1,14 @@
 name: SSH Actions via tmate
 
-on: [push]
+# on: [push]
+on:
+  repository_dispatch:
+  workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: true
+        default: 'true'
 
 jobs:
   build:
