--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -1,4 +1,4 @@
-name: SSH Actions via tmate
+name: SSH
 
 # on: [push]
 on:
@@ -17,30 +17,8 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-    - name: Initialization environment
-      env:
-        DEBIAN_FRONTEND: noninteractive
-      run: |
-        sudo -E apt-get -qq update
-        sudo -E apt-get -qq install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 python2.7 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf wget curl swig rsync
-        sudo timedatectl set-timezone "$TZ"
-        sudo mkdir -p /workdir
-        sudo chown $USER:$GROUPS /workdir
-        cd /workdir
-        git clone https://github.com/coolsnowwolf/lede.git openwrt
-        cd openwrt/package
-        git clone https://github.com/kenzok8/openwrt-packages.git
-        git clone https://github.com/kenzok8/small.git
-        cd ../
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a
-        curl -o .config https://xhdoc.com/20211029181610.config
-        make -j8 download V=s
-        make -j1 V=s
     - name: Start SSH via tmate
       uses: P3TERX/ssh2actions@main
-      # Send connection info to Telegram (optional)
-      # You can find related documents here: https://core.telegram.org/bots
       env:
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
