--- a/.github/workflows/ac2100-openwrt.yml
+++ b/.github/workflows/ac2100-openwrt.yml
@@ -72,7 +72,7 @@ jobs:
 
     - name: Load custom configuration
       run: |
-        mv $CONFIG_FILE openwrt/.config
+        mv op-config/$CONFIG_FILE openwrt/.config
         cd openwrt
         sed -i 's/192.168.1.1/192.168.50.5/g' package/base-files/files/bin/config_generate
 
@@ -80,10 +80,7 @@ jobs:
       id: package
       run: |
         cd openwrt
-        make defconfig
         make -j8 download V=s
-        find dl -size -1024c -exec ls -l {} \;
-        find dl -size -1024c -exec rm -f {} \;
 
     - name: Compile the firmware
       id: compile
