--- a/.github/workflows/ac2100-openwrt-docker.yml
+++ b/.github/workflows/ac2100-openwrt-docker.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
+    environment: docker
     strategy:
       matrix:
         image-namespace: [wataly]
