--- a/.github/workflows/ac2100-openwrt.yml
+++ b/.github/workflows/ac2100-openwrt.yml
@@ -13,11 +13,11 @@ name: Redmi AC2100 OpenWrt
 on:
   repository_dispatch:
   workflow_dispatch:
-#    inputs:
-#      ssh:
-#        description: 'SSH connection to Actions'
-#        required: true
-#        default: 'true'
+   inputs:
+     ssh:
+       description: 'SSH connection to Actions'
+       required: true
+       default: 'false'
 #  schedule:
 #    - cron: 0 8 * * 5
 
@@ -74,7 +74,14 @@ jobs:
       run: |
         mv op-config/$CONFIG_FILE openwrt/.config
         cd openwrt
-        sed -i 's/192.168.1.1/192.168.50.5/g' package/base-files/files/bin/config_generate
+        sed -i 's/192.168.1.1/192.168.50.1/g' package/base-files/files/bin/config_generate
+
+    - name: SSH connection to Actions
+      uses: P3TERX/ssh2actions@v1.0.0
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
     - name: Download package
       id: package
