--- a/.github/workflows/ac2100-openwrt.yml
+++ b/.github/workflows/ac2100-openwrt.yml
@@ -25,7 +25,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: redmi-ac2100.config
+  CONFIG_FILE: readmi-ac2100-passwall.config
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
