--- a/.github/workflows/php-docker.yml
+++ b/.github/workflows/php-docker.yml
@@ -24,9 +24,9 @@ jobs:
       run: |
         cd docker
         sudo docker login --username=${docker_username} --password=${docker_password}
-        sudo export PHP_VERSION=7.2 && docker-compose build --no-cache php-fpm
+        export PHP_VERSION=7.2 && sudo docker-compose build --no-cache php-fpm
         sudo docker push wataly/php:$PHP_VERSION
-        sudo export PHP_VERSION=7.3 && docker-compose build --no-cache php-fpm
+        export PHP_VERSION=7.3 && sudo docker-compose build --no-cache php-fpm
         sudo docker push wataly/php:$PHP_VERSION
-        sudo export PHP_VERSION=7.4 && docker-compose build --no-cache php-fpm
+        export PHP_VERSION=7.4 && sudo docker-compose build --no-cache php-fpm
         sudo docker push wataly/php:$PHP_VERSION
