--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
+    - name: Checkout
+      uses: actions/checkout@main
     - name: Start SSH via tmate
       uses: P3TERX/ssh2actions@main
       env:
