--- a/.github/workflows/php-docker.yml
+++ b/.github/workflows/php-docker.yml
@@ -29,3 +29,7 @@ jobs:
         docker login --username=${docker_username} --password=${docker_password}
         export PHP_VERSION=7.2 && docker-compose build --no-cache php-fpm
         docker push wataly/php:$PHP_VERSION
+        export PHP_VERSION=7.3 && docker-compose build --no-cache php-fpm
+        docker push wataly/php:$PHP_VERSION
+        export PHP_VERSION=7.4 && docker-compose build --no-cache php-fpm
+        docker push wataly/php:$PHP_VERSION
