--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,6 +1,4 @@
 ARG PHP_VERSION
-ARG TZ
-
 # base image
 FROM php:${PHP_VERSION}-fpm-alpine
 
@@ -9,13 +7,14 @@ ENV COMPOSER_HOME=/tmp/composer
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
 # install exts
-RUN chmod +x /usr/local/bin/install-php-extensions && \
-    # php extensions install
-    install-php-extensions pdo_mysql mysqli mbstring gd curl opcache && \
-    # composer
-    install-php-extensions @composer
+# RUN chmod +x /usr/local/bin/install-php-extensions && \
+#     # php extensions install
+#     install-php-extensions pdo_mysql mysqli mbstring gd curl opcache && \
+#     # composer
+#     install-php-extensions @composer
 
 # set timezone
+ARG TZ
 RUN apk --no-cache add tzdata \
     && cp "/usr/share/zoneinfo/$TZ" /etc/localtime \
     && echo "$TZ" > /etc/timezone
