--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -6,12 +6,12 @@ ENV COMPOSER_HOME=/tmp/composer
 
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
-# install exts
-# RUN chmod +x /usr/local/bin/install-php-extensions && \
-#     # php extensions install
-#     install-php-extensions pdo_mysql mysqli mbstring gd curl opcache && \
-#     # composer
-#     install-php-extensions @composer
+#install exts
+RUN chmod +x /usr/local/bin/install-php-extensions && \
+    # php extensions install
+    install-php-extensions pdo_mysql mysqli mbstring gd curl opcache && \
+    # composer
+    install-php-extensions @composer
 
 # set timezone
 ARG TZ
